# group-savings-app

./: README.md
backend/: pyproject.toml  run.py
backend/app/: __init__.py  models.py  routes.py
backend/instance/: savingcircle.db  savings-group
saving-circle-app/: README.md  app.py  index.html  tailwind.config.ts  vite.config.ts.timestamp-1744531144053-b79c9bc4ed383.mjs
saving-circle-app/src/: App.tsx  index.css
saving-circle-app/src/components/layout/: Layout.tsx
saving-circle-app/src/components/savings/: CircleProgress.jsx  CircleProgress.tsx  GroupCard.tsx  GroupCard2.jsx  ProgressBar.jsx  ProgressBar.tsx  TransactionList.jsx  TransactionList.tsx  WithdrawalRequests.jsx  WithdrawalRequests.tsx
saving-circle-app/src/contexts/: AuthContext.jsx  AuthContext.tsx  SavingsContext.jsx  SavingsContext.tsx
saving-circle-app/src/pages/: CreateGroup.tsx  Dashboard.tsx  DiscoverGroups.tsx  GroupDetail.tsx  GroupsList.tsx  GroupsList2.jsx  Index.tsx  Login.tsx  NotFound.tsx  Profile.tsx  Register.tsx
saving-circle-app/src/services/: api.js  api.ts
